[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sxc-api-client"
version = "0.1.6"
authors = [
    { name="Dmitry Kosilov", email="amidflice@gmail.com" },
]
description = "SouthXChange API Client"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "StrEnum>=0.4.8",
    "requests>=2.28.1",
]
keywords = [
    "api client",
    "crypto",
    "cryptocurrency",
    "exchange",
    "southxchange",
    "trading",
]

[project.urls]
"Homepage" = "https://github.com/amid-flice/sxc-api-client"
"Bug Tracker" = "https://github.com/amid-flice/sxc-api-client/issues"
